fix: export sun.security.util for jjwt-gson tests