@@ -17,6 +17,10 @@ dependencies {
     testImplementation "io.jsonwebtoken:jjwt-impl:$libraryVersion"
 }
 
+test {
+    jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
+}
+
 graalvmNative {
     agent {
         defaultMode = "conditional"
